--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -17,9 +17,7 @@ body {
 * Например header__container, main__container и т.д.
 */
 [class*="__container"] {
-  max-width: rem($containerWidth + $mainOffset * 2);
-  margin: 0 auto;
-  padding: 0 rem($mainOffset);
+  width: 100%;
 }
 // Стили отзывчивых картинок (IBG) ============================================
 [class*="-ibg"] {
@@ -63,10 +61,19 @@ body {
 }
 // Оболочка ===================================================================
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-  overflow: hidden; // clip - если используется в проекте position: sticky
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: 1fr min(calc(100% - #{2 * $paddingDesk}), $maxWidthContainer) 1fr;
+  grid-template-rows: min-content;
+
+  @include mediaMob {
+    grid-template-columns: 20px calc(100% - 40px) 20px;
+  }
+
+  > * {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
 }
 .page {
   position: relative;
@@ -80,9 +87,5 @@ body {
     height: rem(2);
     background: transparent;
     pointer-events: none;
-  }
-
-  &_start {
-    padding-top: rem($headerHeight);
   }
 }
