--- a/src/scss/config/scrollbar.scss
+++ b/src/scss/config/scrollbar.scss
@@ -5,7 +5,7 @@
   // Chrome, Edge, and Safari
   &::-webkit-scrollbar {
     width: rem(8);
-    background-color: $whiteColor;
+    background-color: $white;
   }
   &::-webkit-scrollbar-track {
     box-shadow: inset 0 0 rem(6) rgba(#000, 20%);
