--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -8,6 +8,7 @@ $white: #ffffff;
 $black: #000000;
 $lightGray: #bbbbbb;
 $blue: #40bbcd;
+$yellow: #fab512;
 
 $firstAccentColor: $black;
 
@@ -15,8 +16,8 @@ $paddingDesk: 115px;
 
 $fontFamily: $mainFont, sans-serif; // Семейство шрифта по умолчанию
 $fontColor: $black; // Цвет шрифта по умолчанию
-$fontSize: 24px; // Размер шрифта по умолчанию
-$lineHeight: 29px; // Интерлиньяж по умолчанию
+$fontSize: 20px; // Размер шрифта по умолчанию
+$lineHeight: 25px; // Интерлиньяж по умолчанию
 $fontWeight: $mainWeight; // Жирность шрифта по умолчанию
 
 $standartTrans: all 280ms ease-in-out 0ms;
