--- a/src/scss/config/reset.scss
+++ b/src/scss/config/reset.scss
@@ -3,15 +3,15 @@
   margin: 0;
   border: 0;
   box-sizing: border-box;
-  color: $fontColor;
+  color: inherit;
 }
 
-*:before, 
+*:before,
 *:after {
   box-sizing: border-box;
 }
 
-:focus, 
+:focus,
 :active {
   outline: none;
 }
@@ -30,12 +30,12 @@ aside {
 
 html,
 body {
-	width: 100%;
+  width: 100%;
   height: 100%;
-	font-size: $fontSize;
+  font-size: $fontSize;
   font-family: $fontFamily;
   font-weight: $fontWeight;
-	line-height: 1;
+  line-height: 1;
 }
 
 input,
@@ -50,7 +50,7 @@ input::-ms-clear {
 
 button {
   cursor: pointer;
-} 
+}
 
 button::-moz-focus-inner {
   padding: 0;
@@ -59,6 +59,7 @@ button::-moz-focus-inner {
 
 a {
   text-decoration: none;
+
   &:visited {
     text-decoration: none;
   }
@@ -67,10 +68,10 @@ a {
   }
 }
 
-ul, 
+ul,
 li {
   list-style: none;
-} 
+}
 
 img {
   vertical-align: top;
@@ -82,7 +83,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-size:inherit;
+  font-size: inherit;
   font-weight: 400;
 }
 
