--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -55,6 +55,7 @@
           width: 18px;
           height: 10px;
           margin-left: 4px;
+          stroke: $white;
         }
       }
     }
