--- a/src/scss/libs/swiper.scss
+++ b/src/scss/libs/swiper.scss
@@ -101,7 +101,7 @@
   z-index: 10;
 }
 .swiper-3d .swiper-slide-shadow {
-  background: rgba(0, 0, 0, 0.15);
+  background: rgba($black, 0.15);
 }
 .swiper-3d .swiper-slide-shadow-left {
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
