--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,3 +40,5 @@
 @import "layout/request";
 @import "layout/services";
 @import "layout/buildings";
+@import "layout/metal-structures";
+@import "layout/awning-cutting";
