--- a/src/scss/layout/buildings.scss
+++ b/src/scss/layout/buildings.scss
@@ -1,4 +1,6 @@
 .buildings {
+  margin-bottom: 60px;
+
   &__title {
     background-image: url("./../images/photos/05.jpg");
     background-size: cover;
@@ -20,9 +22,6 @@
         font-weight: 400;
       }
     }
-  }
-
-  &__list {
   }
 
   &__item {
@@ -65,7 +64,7 @@
 
     &__item {
       position: relative;
-      height: 400px;
+      aspect-ratio: 1.77;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
