--- a/src/scss/layout/news.scss
+++ b/src/scss/layout/news.scss
@@ -18,7 +18,7 @@
     border-radius: 25px;
     overflow: hidden;
     background-color: rgba($darkBlue, 0.8);
-    box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 4px 4px 9px 0px rgba($black, 0.25);
     color: $white;
     display: flex;
     flex-direction: column;
@@ -33,7 +33,7 @@
       margin-right: -25px;
       position: relative;
       overflow: hidden;
-      box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.25);
+      box-shadow: 4px 4px 9px 0px rgba($black, 0.25);
       border-radius: 25px;
       align-self: flex-start;
       margin-bottom: 40px;
