--- a/src/scss/layout/services.scss
+++ b/src/scss/layout/services.scss
@@ -15,7 +15,7 @@
     position: relative;
     min-height: 215px;
     border-radius: 25px;
-    box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 4px 4px 9px 0px rgba($black, 0.25);
     overflow: hidden;
     color: $white;
     font-size: 15px;
@@ -46,7 +46,7 @@
 
       @include after {
         inset: 0;
-        background: rgba(0, 0, 0, 0.5);
+        background: rgba($black, 0.5);
       }
     }
 
@@ -55,6 +55,7 @@
       top: 20px;
       left: 10px;
       font-size: 64px;
+      font-weight: 700;
     }
   }
 }
