Add block, rename images

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,3 +42,4 @@
 @import "layout/buildings";
 @import "layout/metal-structures";
 @import "layout/awning-cutting";
+@import "layout/flexible-sandwich";
