--- a/src/scss/layout/flexible-sandwich.scss
+++ b/src/scss/layout/flexible-sandwich.scss
@@ -9,6 +9,7 @@
   background-repeat: no-repeat;
   background-position: center;
   font-family: Mulish;
+  margin-bottom: 60px;
 
   .container {
     display: flex;
