--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,7 +19,7 @@
 * раскомментировать для использования 
 */
 // @import 'libs/aos';
-// @import 'libs/swiper';
+@import "libs/swiper";
 
 // Подлючение кастомного скрола для всего сайта =======================================================================================================================
 @import "config/scrollbar";
@@ -43,3 +43,4 @@
 @import "layout/metal-structures";
 @import "layout/awning-cutting";
 @import "layout/flexible-sandwich";
+@import "layout/buildings-advantages";
