--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,3 +44,4 @@
 @import "layout/awning-cutting";
 @import "layout/flexible-sandwich";
 @import "layout/buildings-advantages";
+@import "layout/advantages";
