--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -203,6 +203,12 @@
     color: $black;
     padding: 17px 37px;
   }
+
+  &_white {
+    background-color: $white;
+    color: $black;
+    padding: 17px 37px;
+  }
 }
 
 .title {
