--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -40,7 +40,8 @@
         }
       }
 
-      a {
+      a,
+      span {
         text-decoration: underline;
         text-decoration-color: transparent;
         transition: $standartTrans;
