--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,3 +45,5 @@
 @import "layout/flexible-sandwich";
 @import "layout/buildings-advantages";
 @import "layout/advantages";
+@import "layout/partners";
+@import "layout/contacts";
