--- a/src/scss/layout/news.scss
+++ b/src/scss/layout/news.scss
@@ -63,8 +63,10 @@
       right: 25px;
     }
 
-    h3 {
-      font-size: 15px;
+    &__title {
+      position: static !important;
+      font-size: 15px !important;
+      display: block;
       line-height: 1;
       width: 100%;
       margin-top: auto;
@@ -82,6 +84,10 @@
       a {
         position: static;
         margin-bottom: auto;
+      }
+
+      .news__item__title {
+        margin-bottom: unset;
       }
 
       .news__item__img {
