--- a/src/scss/layout/buildings.scss
+++ b/src/scss/layout/buildings.scss
@@ -73,12 +73,22 @@
       color: $white;
 
       > * {
+        z-index: 2;
+      }
+
+      @include after {
+        width: 100%;
+        height: 100px;
+        bottom: 0;
+        left: 0;
         z-index: 1;
+        background: linear-gradient(to bottom, rgba($blue, 0), rgba($blue, 0.3));
       }
 
       &__img {
         position: absolute;
         inset: 0;
+        z-index: 0;
 
         img {
           position: absolute;
