--- a/src/scss/layout/news.scss
+++ b/src/scss/layout/news.scss
@@ -114,12 +114,68 @@
     align-items: center;
     font-size: 15px;
     font-weight: 700;
+    cursor: pointer;
+
+    &.active {
+      svg {
+        transform: rotate(-180deg);
+      }
+    }
 
     svg {
       stroke: $yellow;
       width: 18px;
       height: 10px;
       margin-top: 20px;
+    }
+  }
+
+  &__others {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px 60px;
+    margin-top: 60px;
+    margin-bottom: 25px;
+
+    &__item {
+      position: relative;
+      height: 215px;
+      padding: 15px 20px;
+      border-radius: 25px;
+      overflow: hidden;
+      box-shadow: 4px 4px 9px 0px rgba($black, 0.25);
+      color: $white;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      font-size: 10px;
+
+      > * {
+        position: relative;
+        z-index: 1;
+      }
+
+      &__img {
+        position: absolute;
+        inset: 0;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+
+        @include after {
+          inset: 0;
+          background-color: rgba($black, 0.5);
+        }
+      }
+
+      &__title {
+        margin-top: auto;
+        font-size: 15px;
+      }
     }
   }
 }
